# RealTimeAVPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  thread-sequence.puml
src/: CMakeLists.txt  mediadefs.h
src/codec/: decoder.cpp  decoder.hpp
src/demuxer/: demuxer.cpp  demuxer.hpp
src/player/: audio_player.cpp  audio_player.hpp  player.cpp  player.hpp
src/renderer/: gl_renderer.cpp  gl_renderer.hpp
src/stream/: stream_source.cpp  stream_source.hpp
src/utils/: logger.hpp
